--- a/components/Image.css
+++ b/components/Image.css
@@ -3,6 +3,7 @@
   position: relative;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  overflow: hidden;
 }
 
 .image {
@@ -13,18 +14,48 @@
   object-fit: cover;
 }
 
-.isGif::after {
+.isLoading {
+  animation: pulse 0.5s infinite alternate;
+}
+
+@keyframes pulse {
+  from {
+    opacity: 0.25;
+  }
+  to {
+    opacity: 0.5;
+  }
+}
+
+.isGif::after,
+.root::before {
   -webkit-backdrop-filter: blur(10px);
   background-color: rgba(0, 0, 0, 0.75);
   border-radius: 0.25em;
-  bottom: 0.5em;
   color: #fff;
-  content: 'GIF';
   display: block;
   font-size: 0.675rem;
   font-weight: 700;
-  left: 0.5em;
+  left: 0;
+  margin: 0.5em;
   line-height: 1;
   padding: 0.25em 0.4em;
   position: absolute;
+  z-index: 1;
+}
+
+.isGif::after {
+  content: 'GIF';
+  bottom: 0;
+}
+
+.root::before {
+  content: attr(href);
+  top: 0;
+  opacity: 0;
+  transition: 0.3s ease;
+}
+
+.root:hover::before {
+  opacity: 1;
 }
