--- a/components/Image.css
+++ b/components/Image.css
@@ -1,8 +1,6 @@
 .root {
   display: block;
   position: relative;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   overflow: hidden;
 }
 
@@ -33,7 +31,6 @@
   background-color: rgba(0, 0, 0, 0.75);
   border-radius: 0.25em;
   color: #fff;
-  display: block;
   font-size: 0.675rem;
   font-weight: 700;
   left: 0;
@@ -56,6 +53,7 @@
   transition: 0.3s ease;
 }
 
-.root:hover::before {
+.root:hover::before,
+.root:focus::before {
   opacity: 1;
 }
