--- a/pages/index.css
+++ b/pages/index.css
@@ -4,6 +4,18 @@
   grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
 }
 
+@media (max-width: 600px) {
+  .imageRoot {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .imageRoot > * {
+    flex: 1 1 10rem;
+    margin: 1px;
+  }
+}
+
 .searchBox {
   appearance: none;
   background-color: transparent;
@@ -16,9 +28,4 @@
   padding: 0.25em 0.5em;
   width: 100%;
   z-index: 2;
-}
-
-.searchBox:focus {
-  outline: 0.05em solid rgba(255, 255, 255, 0.25);
-  outline-offset: -0.05em;
 }
