--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,8 @@
+:root {
+  --defaultInputShadow: 0 8px 24px rgba(0, 0, 0, 0.6),
+    0 0 1px 1px rgba(0, 0, 0, 0.1), inset 0 0 0 1px rgba(255, 255, 255, 0.1);
+}
+
 .imageRoot {
   display: grid;
   grid-gap: 2px;
@@ -18,14 +23,26 @@
 
 .searchBox {
   appearance: none;
-  background-color: transparent;
+  backdrop-filter: blur(5px);
+  background-color: rgba(30, 30, 30, 0.9);
+  border-radius: 8px;
   border: none;
+  box-shadow: var(--defaultInputShadow);
   color: inherit;
   display: block;
   font: inherit;
-  font-size: 10vmin;
+  font-size: 1.5rem;
   font-weight: 700;
+  margin: 12px;
+  max-width: 500px;
   padding: 0.25em 0.5em;
-  width: 100%;
+  position: sticky;
+  top: 12px;
+  transition: 0.3s ease;
   z-index: 2;
+}
+
+.searchBox:focus {
+  outline: none;
+  box-shadow: inset 0 0 0 4px #af52de, var(--defaultInputShadow);
 }
