--- a/pages/index.css
+++ b/pages/index.css
@@ -4,21 +4,14 @@
 }
 
 .imageRoot {
-  display: grid;
-  grid-gap: 2px;
-  grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+  display: flex;
+  flex-flow: column wrap;
+  gap: 1px;
 }
 
-@media (max-width: 600px) {
-  .imageRoot {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .imageRoot > * {
-    flex: 1 1 10rem;
-    margin: 1px;
-  }
+.imageRoot > * {
+  flex: 1 1 10rem;
+  margin: 1px;
 }
 
 .searchBox {
