--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -1,19 +1,6 @@
-.imageRoot {
-  display: flex;
-  flex-flow: row wrap;
-  gap: 1px;
-}
-
-.imageRoot > * {
-  flex: 1 1 10rem;
-  aspect-ratio: 1 / 1;
-  max-height: 10rem;
-  margin: 1px;
-}
-
 .searchBox {
   appearance: none;
-  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
   background-color: rgba(30, 30, 30, 0.9);
   border-radius: 8px;
   border: none;
@@ -21,12 +8,12 @@
   color: inherit;
   display: block;
   font: inherit;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   font-weight: 700;
-  margin: 12px;
+  margin: 8px;
   max-width: 500px;
   padding: 0.25em 0.5em;
-  position: sticky;
+  position: absolute;
   top: 12px;
   transition: 0.3s ease;
   z-index: 2;
@@ -34,5 +21,5 @@
 
 .searchBox:focus {
   outline: none;
-  box-shadow: inset 0 0 0 4px #af52de, var(--defaultInputShadow);
+  box-shadow: inset 0 0 0 3px #af52de, var(--defaultInputShadow);
 }
